src/main/java/com/example/darts/errors/GameNotFoundException.java
package com.example.darts.errors;

public class GameNotFoundException extends RuntimeException {
}
